--- a/public/pages/partials/_header.ejs
+++ b/public/pages/partials/_header.ejs
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TP API | Accueil</title>
+    <link rel="stylesheet" href="../../style.css">
+    <title> <%= title %> </title>
 </head>
 <body>
-    Bienvenue
-</body>
-</html>
