Ajustement du code

--- a/public/pages/admin.ejs
+++ b/public/pages/admin.ejs
@@ -168,7 +168,7 @@
 
                     <form method="post" action="/addUser" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
                         <div>
-                            <label for="email" class="sr-only">Email</label>
+                            <label for="email">Email</label>
 
                             <div class="relative">
                                 <input type="email" name="email"
@@ -179,7 +179,7 @@
                         </div>
 
                         <div>
-                            <label for="password" class="sr-only">mot de passe</label>
+                            <label for="password">mot de passe</label>
 
                             <div class="relative">
                                 <input type="password" name="password"
@@ -259,18 +259,18 @@
 
                     <form method="post" action="/addCourse" class="mx-auto mb-0 mt-8 max-w-md space-y-4">
                         <div>
-                            <label for="title" class="sr-only">nom du cours</label>
+                            <label for="title">Nom du cours:</label>
 
                             <div class="relative">
                                 <input type="title" name="title"
                                     class="w-full rounded-lg border-gray-200 p-4 pe-12 text-sm shadow-sm"
-                                    placeholder="titre" />
+                                    placeholder="Titre" />
 
                             </div>
                         </div>
 
                         <div>
-                            <label for="date" class="sr-only">date du cours</label>
+                            <label for="date">Date du cours</label>
 
                             <div class="relative">
                                 <input type="date" name="date"
@@ -280,7 +280,7 @@
                         </div>
 
                         <div>
-                            <label for="heure" class="sr-only">heure du cours</label>
+                            <label for="heure">Heure du cours</label>
 
                             <div class="relative">
                                 <input type="time" name="heure"
