--- a/public/style.css
+++ b/public/style.css
@@ -700,6 +700,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .place-content-center {
   place-content: center;
 }
